--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -4,25 +4,23 @@
   box-sizing: border-box;
 }
 :root {
---text-color:white;
---bg-mobile:url(./assets/assets/bg-mobile.jpg);
---stroke-color: rgba(255, 255, 255, 0.5);
---surface-color: rgba(255, 255, 255, 0.05);
---surface-color-hover: rgba(0, 0, 0, 0.02);
---highlight-colo: rgba(255, 255, 255, 0.2);
---switch-bg: url(./Moon-stars.svg);
+  --text-color: white;
+  --bg-mobile: url(./assets/assets/bg-mobile.jpg);
+  --stroke-color: rgba(255, 255, 255, 0.5);
+  --surface-color: rgba(255, 255, 255, 0.05);
+  --surface-color-hover: rgba(0, 0, 0, 0.02);
+  --highlight-colo: rgba(255, 255, 255, 0.2);
+  --switch-bg: url(./Moon-stars.svg);
 }
 .light {
-  --text-color:black;
-  --bg-mobile:url(./assets/assets/bg-mobile-light.jpg);
+  --text-color: black;
+  --bg-mobile: url(./assets/assets/bg-mobile-light.jpg);
   --stroke-color: rgba(0, 0, 0, 0.5);
   --surface-color: rgba(0, 0, 0, 0.05);
   --surface-color-hover: rbga(0, 0, 0, 0.02);
   --highlight-colo: rgba(0, 0, 0, 0.1);
   --switch-bg: url(./sun.svg);
-
 }
-
 
 body {
   /*
@@ -34,6 +32,7 @@ body {
 
   /*Simplificando o cogido a cima   background: color image repeat positio/size */
   background: var(--bg-mobile) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -41,7 +40,8 @@ body * {
   color: var(--text-color);
 }
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto 0px auto;
   padding: 0 24px;
 }
@@ -63,46 +63,41 @@ body * {
 
 /*switch*/
 #switch {
-  
   width: 64px;
   position: relative;
 
   margin: 4px auto;
 }
 
-#switch button{
-height: 32px;
-width: 32px;
-background: white var(--switch-bg) no-repeat center;
-border: 0;
-border-radius: 50%;
+#switch button {
+  height: 32px;
+  width: 32px;
+  background: white var(--switch-bg) no-repeat center;
+  border: 0;
+  border-radius: 50%;
 
-position: absolute;
-top: 50%;
-left: 0;
-transform: translateY(-50%);
-z-index: 1;
-
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  z-index: 1;
 }
 
-.light #switch button{
+.light #switch button {
   right: 0;
   left: initial;
 }
 
-#switch span{
-display: block;
-width: 64px;
-height: 24px;
-background: var(--surface-color);
-border: 1px solid var(--stroke-color);
-backdrop-filter: blur(4px);
--webkit-backdrop-filter: blur(4px);
-border-radius: 9999px;
+#switch span {
+  display: block;
+  width: 64px;
+  height: 24px;
+  background: var(--surface-color);
+  border: 1px solid var(--stroke-color);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 9999px;
 }
-
-
-
 
 /*links*/
 ul {
@@ -126,9 +121,8 @@ ul li a {
 
   text-decoration: none;
   font-weight: 500;
-  
-  transition: background 0.2s;
 
+  transition: background 0.2s;
 }
 ul li a:hover {
   background: var(--surface-color-hover);
@@ -150,13 +144,23 @@ ul li a:hover {
   border-radius: 50%;
   transition: background 0.2s;
 }
-#social-links a:hover{
+#social-links a:hover {
   background: var(--highlight-colo);
 }
 
 footer {
   padding: 24px 0;
   font-size: 14px;
-  color:var(--text-color);
+  color: var(--text-color);
   text-align: center;
+}
+
+/*media queries*/
+@media (min-width: 700px) {
+  :root {
+    --bg-mobile: url(./assets/assets/bg-desktop.jpg);
+  }
+  .light {
+    --bg-mobile: url(./assets/assets/bg-desktop-light.jpg);
+  }
 }
